syntax = "proto3";

package pb;

option go_package = "github.com/mahdi-asadzadeh/go-grpc-gateway-microservice/pkg/pb";

message  Order{
  int64 id = 1;
  float price = 2;
  int64 product_id = 3;
  int64 user_id = 4;
  int32 quantity = 5;
}

message CreateOrderRequest{
  float price = 1;
  int64 product_id = 2;
  int64 user_id = 3;
  int32 quantity = 4;
}

message CreateOrderResponse{
  Order order = 1;
}

message ListOrderRequest{
  int64 user_id = 4;
  int32 page = 1;
  int32 page_size = 2;
}

message ListOrderResponse{
  int64 id = 1;
  float price = 2;
  int64 product_id = 3;
  int64 user_id = 4;
  int32 quantity = 5;
  string create_at = 6;
  string update_at = 7;
}

message DeleteOrderRequest{
  int64 order_id = 1;
  int64 user_id = 2;
}

message DeleteOrderResponse{
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){};
  rpc ListOrder(ListOrderRequest) returns (stream ListOrderResponse){};
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse){};
}